--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.4.10",
     "next": "13.4.10",
+    "pnpm": "^8.6.11",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,6 +37,7 @@
     "@storybook/nextjs": "7.1.0",
     "@storybook/react": "7.1.0",
     "@storybook/testing-library": "0.2.0",
+    "@tauri-apps/api": "^1.4.0",
     "@tauri-apps/cli": "^1.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
@@ -49,6 +51,7 @@
     "plop": "^3.1.2",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
+    "react-icons": "^4.10.1",
     "storybook": "7.1.0"
   }
 }
